--- a/MyWeatherApp/Info.plist
+++ b/MyWeatherApp/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<string>YES</string>
+		<key>NSExceptionAllowsInsecureHTTPLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>api.openweathermap.org</key>
@@ -19,10 +23,23 @@
 		</dict>
 		<key>NSIncludesSubdomains</key>
 		<true/>
-		<key>NSExceptionAllowsInsecureHTTPLoads</key>
+	</dict>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
 		<true/>
-		<key>NSAllowsArbitraryLoads</key>
-		<string>YES</string>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
 	</dict>
 </dict>
 </plist>
